--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,18 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "dexie": "^3.2.4",
     "pinia": "^2.1.7",
     "tiny-emitter": "^2.1.0",
+    "unplugin-auto-import": "^0.16.6",
     "vue": "^3.3.4",
     "vue-i18n": "^9.5.0",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-swatches": "^1.2.3",
     "vuetify": "^3.3.22",
-    "vuetify-swatches": "^1.4.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
