--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,9 +24,12 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@draughts/*": [
+        "./src/draughts/*"
       ]
     },
-    "types": ["vuetify"]
+    "types": ["vuetify", "vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
