--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "dexie": "^3.2.4",
+    "esserializer": "^1.3.11",
+    "js-file-download": "^0.4.12",
     "pinia": "^2.1.7",
     "tiny-emitter": "^2.1.0",
     "unplugin-auto-import": "^0.16.6",
