--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "esserializer": "^1.3.11",
     "js-file-download": "^0.4.12",
     "pinia": "^2.1.7",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "sturdy-websocket": "^0.2.1",
     "tiny-emitter": "^2.1.0",
     "unplugin-auto-import": "^0.16.6",
     "vue": "^3.3.4",
