--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,15 +17,12 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "allowJs": true,
 
     "paths": {
       "@/*": [
         "./src/*"
-      ],
-      "@draughts/*": [
-        "./src/draughts/*"
       ]
     },
     "types": ["./src/types.d.ts", "vuetify/types"]
