docker/autoimport fix

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,6 @@
     },
     "types": []
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "**/*.ts", "src/**/*.json"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
