--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@unhead/vue": "^1.8.7",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "dexie": "^3.2.4",
@@ -39,6 +40,7 @@
     "sass": "^1.69.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.17.0",
     "vue-tsc": "^1.8.5"
   }
 }
